@@ -1,0 +1,35 @@
+/* use GNU coding style */
+--gnu-style
+
+/* for more consistency */
+--swallow-optional-blank-lines
+
+/* OpenAL typedefs */
+-T ALboolean
+-T ALchar
+-T ALbyte
+-T ALubyte
+-T ALshort
+-T ALushort
+-T ALint
+-T ALuint
+-T ALsizei
+-T ALenum
+-T ALfloat
+-T ALdouble
+-T ALvoid
+-T ALCboolean
+-T ALCchar
+-T ALCbyte
+-T ALCubyte
+-T ALCshort
+-T ALCushort
+-T ALCint
+-T ALCuint
+-T ALCsizei
+-T ALCenum
+-T ALCfloat
+-T ALCdouble
+-T ALCvoid
+-T ALCdevice
+-T ALCcontext
